[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation library using recursive backtracker (DFS)"
readme = "README_pkg.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ripaparo, salargo-"},
]
keywords = ["maze", "generator", "algorithm", "dfs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]